Fixed the weird spacing in the expiration notice.

--- a/app/assets/stylesheets/components/_expiring.scss
+++ b/app/assets/stylesheets/components/_expiring.scss
@@ -1,25 +1,25 @@
 .expiring-section {
-  background-color: $ft-pink;
   padding: 4px;
   border-radius: 16px;
 }
 
 .expiring-alert {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  margin-left: 16px;
-  gap: 6px;
+  margin-left: 8px;
   border-radius: 16px;
   box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.1);
   background-color: $ft-pink;
+  position: relative;
 }
 
 .expiring-message {
   padding: 4px;
   font-size: 16px;
+  margin-left: -20px;
   font-weight: bold;
-  position: relative;
   color: white;
+  z-index: 2;
 }
 
 @keyframes pulseRotate {
