--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -6,5 +6,5 @@
 
 
 .search-bar {
-  margin-right: 5px;
+  margin-right: 8px;
 }
